# blacklight

./: README.md  pixi.toml  pyproject.toml
src/blacklight/: __init__.py  app.py  io.py  plot.py
src/blacklight/scripts/: blacklight.py
