[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "blacklight"
dynamic = ["readme"]
version = "0.01"
authors = [
         {name = "Srikrishna Sekhar", email = "ssekhar@nrao.edu" },
         ]
description = "Radio interferometric UV plane visualization"
dependencies = [
    'casatools',
    'casatasks',
    'casadata',
    'numpy',
    'pyarrow',
    'dask[dataframe]',
    'datashader',
    'holoviews',
    'panel',
    'colorcet',
    'numba']
license = {file="LICENSE"}
requires-python = ">=3.10"
classifiers = [
            "Programming Language :: Python :: 3",
            "License :: OSI Approved :: MIT License",
            "Operating System :: OS Independent",
            ]

[project.urls]
"Homepage" = "https://github.com/Kitchi/blacklight"

[project.scripts]
blacklight = "blacklight.scripts.blacklight:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ['*.txt']

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
blacklight = { path = ".", editable = true }

